Prevent horizontal scrollbar appearing in main chat

--- a/MediaWikiChat.css
+++ b/MediaWikiChat.css
@@ -70,7 +70,7 @@
 }
 
 .mwchat-item-timestamp.real {
-	width: 8em;
+	padding-left: 0.5em;
 	position: absolute;
 	right: 0;
 	top: 0;
